--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,7 @@
 .react-datepicker__input-container input {
     width: 100% !important;
 }
+.dark .bg-cover {
+    background-image: url('./assets/upcoming-dark.jpg') !important;
+}
+
